--- a/ZarnasBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/ZarnasBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -18,7 +18,11 @@
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
-                <th>Name</th>
+                <th>Title</th>
+                <th>ISBN</th>
+                <th>Price</th>
+                <th>Author</th>
+                <th>Category</th>
                 <th></th>
             </tr>
         </thead>
