--- a/ZarnasBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/ZarnasBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -20,7 +20,7 @@
             <tr class="table-info">
                 <th>Title</th>
                 <th>ISBN</th>
-                <th>Price</th>
+                <th>Description</th>
                 <th>Author</th>
                 <th>Category</th>
                 <th></th>
