--- a/ZarnasBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/ZarnasBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,19 +1,16 @@
-﻿@model  ZarnasBooks.Models.ViewModels.ProductVM
+﻿@model ZarnasBooks.Models.ViewModels.ProductVM
 
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    var title = "Create Product";
-}
+@{ Layout = "~/Views/Shared/_Layout.cshtml";
+                var title = "Create Product"; }
 
 <form method="post" enctype="multipart/form-data">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.Product.Id != 0)       // if this value is null it will not display 'Edit Category', change to  0
+        @if (Model.Product.Id != 0)
         {
             // edit
             title = "Edit Product";
-            <input type="hidden" asp-for="Product.Id" />
-        }
+<input type="hidden" asp-for="Product.Id" />}
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
         </div>
@@ -51,6 +48,7 @@
                 </div>
                 <div class="col-8">
                     <textarea asp-for="Product.Description" class="form-control"></textarea>
+                    <span asp-validation-for="Product.Author" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -62,13 +60,14 @@
                     <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
                 </div>
             </div>
+            
             <div class="form-group row">
                 <div class="col-4">
                     Category
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Product.CategoryId, Model.CategoryList, "-Select a Category",
-                   new { @class = "form-control" })
+                        new { @class = "form-control" })
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
             </div>
@@ -78,7 +77,7 @@
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Product.CoverTypeId, Model.CoverTypeList, "-Select a Cover Type",
-                   new { @class = "form-control" })
+                        new { @class = "form-control" })
                     <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
                 </div>
             </div>
@@ -94,25 +93,48 @@
                 <div class="col-8 offset-4">
                     @if (Model.Product.Id != 0)
                     {
-                        <partial name="_EditAndBackToListButton" model="Model.Product.Id" />
-                    }
+        <partial name="_EditAndBackToListButton" model="Model.Product.Id" /> }
                     else
                     {
-                        <div class="row">
-                            <div class="col">
-                                <button type="submit" onclick="return validateInput()" class="btn btn-primary form-control">Create</button>
-                            </div>
-                            <div class="col">
-                                <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
-                            </div>
-                        </div>
-                    }
+        <div class="row">
+            <div class="col">
+                <button type="submit" onclick="return validateInput()" class="btn btn-primary form-control">Create</button>
+            </div>
+            <div class="col">
+                <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
+            </div>
+        </div>}
                 </div>
             </div>
         </div>
+        @if (Model.Product.Id != 0)
+        {
+<div class="col-3 offset-1 pt-4">
+    <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+</div>            }
     </div>
 </form>
 
-@section Scripts {
+@section Scripts{
     <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdn.tiny.cloud/1/n94ifuzvl80pchikopiwgz2esrw8n28dwcywvpejlqrregfp/tinymce/5/tinymce.min.js"></script>
+
+    <script>
+
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'lists',
+            menubar: 'file edit format'
+        });
+
+
+        function validateInput() {
+            if (document.getElementById("uploadBox").value == "") {
+                swal("Error", "Please select an image", "error");
+                return false;
+            }
+            return true;
+        }
+
+    </script>
 }
