--- a/ZarnasBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/ZarnasBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -117,7 +117,7 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
-    <script src="https://cdn.tiny.cloud/1/n94ifuzvl80pchikopiwgz2esrw8n28dwcywvpejlqrregfp/tinymce/5/tinymce.min.js"></script>
+    <script src=""https://cdn.tiny.cloud/1/a1bnqq4xt0zagjw2qfeem6qel391ytzwnj32f31h94zjklq9/tinymce/6/tinymce.min.js""></script>
 
     <script>
 
